--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -1,8 +1,8 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
-changeLanguage("en");
+changeLanguage("ja");
 
 const pageTitle = "About Me";
 const identity = {
@@ -29,7 +29,7 @@ const textCase = "uppercase";
 <BaseLayout pageTitle={pageTitle}>
     <style define:vars={{ skillColor, fontWeight, textCase }}>
       h1 {
-        color: rgb(236, 152, 222);
+        color: purple;
         font-size: 4rem;
       }
       .skill {
