--- a/src/pages/ja/index.astro
+++ b/src/pages/ja/index.astro
@@ -1,14 +1,14 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import Greeting from "../components/Greeting";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import Greeting from "../../components/Greeting";
 
-changeLanguage("en");
+changeLanguage("ja");
 
 const pageTitle = "Home Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h1>提问：我最喜欢哪个游戏角色?</h1>
-  <h2>My favourite character - Akechi</h2>
+  <h2>My beautiful wife - Akechi</h2>
   <Greeting client:load messages={["我们都喜欢明明", "明明好", "今天背诵明明经了吗", "今天对明明说晚安了吗"]} />
 </BaseLayout>
