--- a/src/pages/ja/tags/index.astro
+++ b/src/pages/ja/tags/index.astro
@@ -1,10 +1,10 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
 
-changeLanguage("en");
+changeLanguage("ja");
 
-const allPosts = await Astro.glob("../posts/*.md");
+const allPosts = await Astro.glob("../../posts/*.md");
 const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 const pageTitle = "Tag Index";
 ---
